# seia

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  celestia-devtools.just  justfile
.github/workflows/: checks.yml  docs.yml  live-tests.yml  npm-release.yml  npm_publish.yml  publish.yml  squash-msg-clean.yml
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md  book.toml
docs/ar/design/: architecture.md
docs/ar/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/en/: SUMMARY.md
docs/en/design/: architecture.md
docs/en/guides/: engines.md  library.md  quickstart.md
docs/es/: README.md  SUMMARY.md  book.toml
docs/es/design/: architecture.md
docs/es/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/fr/: README.md  SUMMARY.md  book.toml
docs/fr/design/: architecture.md
docs/fr/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/ja/: README.md  SUMMARY.md  book.toml
docs/ja/design/: architecture.md
docs/ja/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/ko/: README.md  SUMMARY.md  book.toml
docs/ko/design/: architecture.md
docs/ko/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/ru/: README.md  SUMMARY.md  book.toml
docs/ru/design/: architecture.md
docs/ru/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/theme/: lang-switcher.js
docs/zh-hans/: README.md  SUMMARY.md  book.toml
docs/zh-hans/design/: architecture.md
docs/zh-hans/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/zh-hant/: README.md  SUMMARY.md  book.toml
docs/zh-hant/design/: architecture.md
docs/zh-hant/guides/: browser-mode.md  engines.md  library.md  quickstart.md
docs/zhs/: README.md  SUMMARY.md
docs/zhs/design/: architecture.md
docs/zhs/guides/: engines.md  quickstart.md
docs/zht/: README.md  SUMMARY.md
docs/zht/design/: architecture.md
docs/zht/guides/: engines.md  quickstart.md
examples/: engines.toml
src/: browser.rs  builtin_engines.toml  client.rs  config.rs  engines.rs  extractor.rs  lib.rs  main.rs  mcp.rs  profiles.rs  result.rs  utils.rs
src/engines_impl/: arxiv.rs  bing.rs  bocha.rs  brave.rs  core.rs  crossref.rs  custom.rs  doaj.rs  duckduckgo.rs  metaso.rs  mod.rs  openalex.rs  pubmed.rs  searxng.rs  semantic_scholar.rs  tavily.rs  wikipedia.rs  zhipu.rs
tests/: integration.rs  live_search.rs  mcp_smoke.rs
