[package]
name = "seia"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["langyo <langyo.china@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
description = "Multi-engine web search library"
repository = "https://github.com/celestia-island/seia"
keywords = ["search", "web", "duckduckgo", "tavily", "searxng"]
categories = ["api-bindings", "web-programming", "command-line-interface"]
exclude = ["docs/", "justfile", ".github/"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "seia"
path = "src/main.rs"

[lib]
name = "seia"
path = "src/lib.rs"

[dependencies]

anyhow = "^1"
async-trait = "^0.1"
# Optional: Boa JS engine for pre-request scripts in custom engines
boa_engine = { version = "^0.21", optional = true }
clap = { version = "^4", features = ["derive"] }
dirs = "^6"
jsonpath-rust = "^1.0"
regex = "^1"
reqwest = { version = "^0.13", features = ["json", "rustls-no-provider", "socks", "query"], default-features = false }
# MCP (optional, for standalone MCP server)
rmcp = { version = "^2", optional = true, features = ["server", "transport-io", "macros", "schemars"] }
# Explicit crypto-provider init for rustls (reqwest uses rustls-no-provider).
rustls = { version = "^0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
schemars = { version = "^1", optional = true, features = ["derive"] }
scraper = "^0.27"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tokio-stream = "^0.1"
# Custom engine config
toml = "^1.1"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
url = "^2"
[features]
default = []
# Standalone MCP (Model Context Protocol) server exposing the search tools over
# stdio. Requires rmcp + schemars; pulls in tokio io-std at the binary level.
mcp = ["dep:rmcp", "dep:schemars", "tokio/io-std"]
# Enable pre-request JavaScript scripting (Postman-style) in custom engines.
# Pulls in the Boa JS engine (~5 MB extra binary size).
pre-request-script = ["dep:boa_engine"]

[dev-dependencies]

tokio-test = "^0.4"
